[package]
name = "r-streamer"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
env_logger = "0.7"
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["macros", "udp", "time", "rt-threaded"] }
log = "0.4"
webrtc-sdp = "0.3"
rand = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
byteorder = "1.3"
crc32fast = "1.2"
actix = "0.10.0"
actix-rt = "1"
tokio-openssl = "0.4"
srtp = { git = "https://github.com/Mnwa/srtp", branch = "bump" }
actix-web = "3"
actix-files = "0.4"
smallvec = "1.4"
bimap = "0.5"
mimalloc = "0.1"
bumpalo = { version = "3.4", features = ["collections"] }