[package]
name = "r-streamer"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
env_logger = "0.8"
futures = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
webrtc-sdp = "0.3"
rand = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
byteorder = "1.4"
crc32fast = "1.2"
actix = "0.11"
actix-rt = "2.2"
tokio-openssl = "0.6"
srtp = { git = "https://github.com/Mnwa/srtp", branch = "bump" }
actix-web = "4.0.0-beta.5"
actix-files = "0.6.0-beta.4"
smallvec = "1.6"
bimap = "0.5"
mimalloc = "0.1"
bumpalo = { version = "3.6", features = ["collections"] }